# crypt-algo

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_action.yml
cpp/: CMakeLists.txt
cpp/include/: algo_utils.hpp  bound_value.hpp  macro_utils.hpp  matrix.hpp  type_trait_utils.hpp
cpp/src/passwordlib/: encryption.hpp  encryption_key.hpp  password_generator.hpp
cpp/src/passwords/: CMakeLists.txt  main.cpp
cpp/tests/: CMakeLists.txt  bound_value_tests.cpp  encryption_tests.cpp  macro_tests.cpp  matrix_tests.cpp  password_generator_tests.cpp
scripts/: build.sh  build_all.sh  echo_config.sh  install_reqs.sh  rebuild_all.sh
src/: algo_utils.hpp  bound_value.hpp  encryption.hpp  encryption_key.hpp  macro_utils.hpp  matrix.hpp  password_generator.hpp  type_trait_utils.hpp
tests/: CMakeLists.txt  bound_value_tests.cpp  encryption_tests.cpp  macro_tests.cpp  main.cpp  matrix_tests.cpp  password_generator_tests.cpp  templates_tests.cpp
